# spl-token-airdrop

./: Cargo.toml  README.md
src/: cli_args.rs  main.rs
