[package]
name = "collection-airdrop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.9.15"
solana-sdk = "1.9.15"
solana-account-decoder = "1.9.15" 
mpl-token-metadata = "1.2.7"
base64 = "0.13.0"
tokio = "1.16.1"
spl-token = "3.2.0"
spl-associated-token-account = "1.0.3"
serde_json = "1.0"
serde = "1.0"
clap = { version = "3.1.9", features = [ "derive" ] }
bs58 = "0.4.0"